# django-flex-menus

./: .gitignore  .pre-commit-config.yaml  README.md  codecov.yml  manage.py  pyproject.toml  requirements.txt  tasks.py  test.py
.github/: dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: build.yml  changelog.yml  dependencies.yml  docs.yml  on-release-main.yml  tests.yml
docs/: building-menus.md  checks.md  conf.py  configuration.md  context-aware-example.md  custom-renderers.md  dynamic-url-resolution.md  getting-started.md  index.md  manipulating-menus.md  simple-example.md  template-usage.md  templates.md  visibility-checks.md
docs/api/: index.md  index.rst
docs/api/flex_menu/: flex_menu.apps.md  flex_menu.checks.md  flex_menu.management.commands.md  flex_menu.management.commands.render_menu.md  flex_menu.management.md  flex_menu.md  flex_menu.menu.md  flex_menu.templatetags.flex_menu.md  (+1 more)
example/: __init__.py  menus.py  models.py  renderers.py  settings.py  urls.py  views.py
example/migrations/: 0001_initial.py
example/templates/: base.html  context_menu_demo.html
flex_menu/: checks.py  menu.py  utils.py
flex_menu/templatetags/: flex_menu.py
tests/: README.md  conftest.py  settings.py  test_apps.py  test_checks.py  test_child_validation.py  test_integration.py  test_management_commands.py  test_menu.py  test_menu_additional.py  test_menu_core.py  test_menu_item.py  test_menu_url_resolution.py  test_performance.py  test_renderers.py  test_templatetags.py  test_utils.py  urls.py
(+18 files in other folders)
